--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,24 @@
-version: '3.8'
+version: "3.9"
 
 services:
   web:
     build: .
     ports:
       - "5000:5000"
-      - "80:5000"
-      # - "443:5000" 
-
     environment:
       - DB_NAME=vulnerable_bank
       - DB_USER=postgres
       - DB_PASSWORD=postgres
-      - DB_HOST=db 
+      - DB_HOST=db
       - DB_PORT=5432
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./static/uploads:/app/static/uploads
     networks:
       - vuln_network
+    restart: always
 
   db:
     image: postgres:13
@@ -33,6 +32,12 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - vuln_network
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
@@ -40,3 +45,4 @@ volumes:
 networks:
   vuln_network:
     driver: bridge
+
