--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,11 +23,17 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install semgrep snyk requests
+          pip install semgrep requests
+          npm install -g snyk
 
       - name: Run Semgrep (SAST)
         run: semgrep --config=p/security --json --output semgrep-report.json
