--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,7 +13,8 @@ jobs:
       FLASK_APP: app.py
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      SNYK_TOKEN: ${{ secrets.SNYK_ORG_TOKEN }}
+      SNYK_ORG: ${{ secrets.SNYK_ORG_ID }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -38,8 +39,11 @@ jobs:
       - name: Run Semgrep (SAST)
         run: semgrep --config=p/security --json --output semgrep-report.json
 
-      - name: Run Snyk (SCA)
-        run: snyk test --all-projects --json > snyk-report.json
+      - name: Authenticate Snyk (Organization)
+        run: snyk auth $SNYK_TOKEN
+
+      - name: Run Snyk (SCA) - Organization
+        run: snyk test --all-projects --org=$SNYK_ORG --json > snyk-report.json
 
       - name: Notify Slack if critical vulnerabilities
         run: python scripts/notify_critical.py
