--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -37,7 +37,7 @@ jobs:
           npm install -g snyk
 
       - name: Run Semgrep (SAST)
-        run: semgrep --config=p/security --json --output semgrep-report.json
+        run: semgrep --config=security --json --output semgrep-report.json
 
       - name: Authenticate Snyk (Organization)
         run: snyk auth $SNYK_TOKEN
