--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,4 +1,4 @@
-name: Security Scan
+name: Scan
 
 on:
   push:
@@ -46,7 +46,7 @@ jobs:
 
       # Upload reports as artifacts
       - name: Upload Security Reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: security-reports
           path: |
