--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,62 +1,42 @@
-name: Scan
+name: DevSecOps Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
   security:
     runs-on: ubuntu-latest
-
+    env:
+      FLASK_APP: app.py
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
     steps:
-      - name: Checkout code
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      # Install Semgrep
-      - name: Install Semgrep
-        run: pip install semgrep
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install semgrep requests
+          npm install -g snyk
 
-      # Run Semgrep
-      - name: Run Semgrep
-        run: semgrep --config="p/ci" --json --output semgrep-report.json
+      - name: Run Semgrep (SAST)
+        run: semgrep --config=p/security --json --output semgrep-report.json
 
-
-      # Install Snyk
-      - name: Install Snyk
-        run: npm install -g snyk
-
-      # Authenticate Snyk with Personal API Token
-      - name: Authenticate Snyk
-        run: snyk auth $SNYK_TOKEN
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
-      # Run Snyk test
-      - name: Run Snyk
+      - name: Run Snyk (SCA)
         run: snyk test --all-projects --json > snyk-report.json
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      # Upload reports as artifacts
-      - name: Upload Security Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: security-reports
-          path: |
-            semgrep-report.json
-            snyk-report.json
-
-      # Send notification to Slack
-      - name: Notify Slack
-        if: always()
-        run: |
-          curl -X POST -H 'Content-type: application/json' \
-          --data '{"text":"Security scan finished. Check the reports in GitHub Actions artifacts."}' \
-          ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Notify Slack if critical vulnerabilities
+        run: python scripts/notify_critical.py
