--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -35,7 +35,7 @@ jobs:
 
 
       - name: Run Snyk (SCA)
-        run: snyk test --all-projects --json > snyk-report.json
+        run: snyk test --all-projects --severity-threshold=high --json > snyk-report.json
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
