--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -31,11 +31,11 @@ jobs:
           npm install -g snyk
 
       - name: Run Semgrep (SAST)
-        run: semgrep --config="p/ci" --json --output semgrep-report.json
+        run: semgrep --config="p/ci" --json --output semgrep-report.json || true
 
 
       - name: Run Snyk (SCA)
-        run: snyk test --all-projects --severity-threshold=high --json > snyk-report.json
+        run: snyk test --all-projects --json > snyk-report.json || true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
