--- a/.github/workflows/securitypull.yml
+++ b/.github/workflows/securitypull.yml
@@ -1,4 +1,4 @@
-name: DevSecOps Pipeline
+name:  Pipeline
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
         run: semgrep --config="p/ci"security --json --output semgrep-report.json || true
 
       - name: Run Snyk (SCA)
-        run: snyk test --all-projects --json > snyk-report.json | | true
+        run: snyk test --all-projects --json > snyk-report.json || true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
