--- a/.github/workflows/securitypull.yml
+++ b/.github/workflows/securitypull.yml
@@ -1,4 +1,4 @@
-name:  Pipeline
+name: DevSecOps Pipeline
 
 on:
   push:
@@ -30,6 +30,12 @@ jobs:
           pip install -r requirements.txt
           pip install semgrep requests
           npm install -g snyk
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
 
       - name: Run Semgrep (SAST)
         run: semgrep --config="p/ci"security --json --output semgrep-report.json || true
@@ -64,7 +70,6 @@ jobs:
         with:
           target: "http://localhost:5000"
           rules_file_name: ".zap/rules.tsv"
-          cmd_options: "-a"
         continue-on-error: true
 
       - name: Upload all security reports
